<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/movieDetailsTitleLinearLayoutPadding"
            android:background="@color/colorPrimary">


            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textIconColor"
                tools:text="Banana"
                android:textSize="40sp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/movieDetailsViewColor"
            android:layout_margin="@dimen/movieDetailsViewMargin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_movie__details_poster"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:contentDescription="TODO" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_rating"
                    style="@style/activityMovieDetailsHeader" />

                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    style="@style/activityMovieDetailsBody"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_release_date"
                    style="@style/activityMovieDetailsHeader" />

                <TextView
                    android:id="@+id/tv_release_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/activityMovieDetailsBody" />
                <Button
                    android:id="@+id/bt_save_to_favorites"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:background="@color/colorAccent"
                    android:textColor="@color/textIconColor"
                    tools:text="@string/favorites_button_remove"
                    android:textSize="10sp"/>

            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/movieDetailsViewColor"
            android:layout_margin="@dimen/movieDetailsViewMargin" />

        <TextView
            android:id="@+id/tv_movie_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:padding="16dp"
            style="@style/activityMovieDetailsBody"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trailers_label"
            android:padding="16dp"
            style="@style/activityMovieDetailsHeader" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lv_trailers_buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">
        </androidx.recyclerview.widget.RecyclerView>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/movieDetailsViewColor"
            android:layout_margin="@dimen/movieDetailsViewMargin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ReviewLabel"
            android:padding="16dp"
            style="@style/activityMovieDetailsHeader" />
        <TextView
            android:id="@+id/tv_review_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/activityMovieDetailsBody"
            android:padding="16dp"/>
        <TextView
            android:id="@+id/tv_review_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/bt_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:src="@drawable/ic_chevron_left_48px"
                />
            <TextView
                android:id="@+id/tv_review_pages"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp"
                tools:text="1/3"/>
            <ImageButton
                android:id="@+id/bt_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:src="@drawable/ic_chevron_right_48px"/>
        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
</layout>
